Fixed footer on mobile view

--- a/src/styles/Main.module.css
+++ b/src/styles/Main.module.css
@@ -11,7 +11,9 @@
 .productSlider {
   width: 90%;
   margin: auto;
-  height: 100%;
+  max-height: 90vh;
+  overflow: hidden;
+  margin-bottom: 15%;
 }
 
 .carCard {
